manifests/ingress-rules.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: devpie-client-ingress-rules
  annotations:
    traefik.ingress.kubernetes.io/router.pathmatcher: PathPrefix
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    # - host: devpie.local
    #   http:
    #     paths:
    #       - path: /
    #         backend:
    #           serviceName: spa-client-svc
    #           servicePort: 80

    - host: client-backend.devpie.local
      http:
        paths:
          - path: /api/v1/users
            backend:
              serviceName: app-identity-svc
              servicePort: 4000
          - path: /api/v1/accounting
            backend:
              serviceName: app-accounting-svc
              servicePort: 4010
          - path: /api/v1/projects
            backend:
              serviceName: mic-projects-svc
              servicePort: 4020
          - path: /
            backend:
              serviceName: nats-svc
              servicePort: 8222
  tls:
    - secretName: ingress-tls-secrets
